crates/wt-core/src/snapshots/wt_core__report__tests__refresh.snap
---
source: crates/wt-core/src/report.rs
expression: envelope
---
{
  "wt": {
    "schema": 1,
    "version": "VERSION"
  },
  "ok": true,
  "command": "command",
  "data": {
    "target": "repo/work",
    "scope": ".",
    "task": "db",
    "before": "declared",
    "after": "present",
    "child": null
  },
  "notices": [
    {
      "level": "info",
      "code": "EXAMPLE",
      "subject": "repo/work",
      "message": "example notice"
    }
  ],
  "error": null
}
