crates/wt-core/src/snapshots/wt_core__report__tests__remove.snap
---
source: crates/wt-core/src/report.rs
expression: envelope
---
{
  "wt": {
    "schema": 1,
    "version": "VERSION"
  },
  "ok": true,
  "command": "command",
  "data": {
    "target": "repo/work",
    "removed": true,
    "destroyed": [
      {
        "scope": ".",
        "task": "db",
        "state": "dropped",
        "child": {
          "code": 0,
          "signal": null
        }
      }
    ],
    "orphans_kept": [
      "legacy"
    ],
    "branch_deleted": false,
    "branch_kept": "work",
    "session_closed": false,
    "cache_deleted": null
  },
  "notices": [
    {
      "level": "info",
      "code": "EXAMPLE",
      "subject": "repo/work",
      "message": "example notice"
    }
  ],
  "error": null
}
