crates/wt-core/src/snapshots/wt_core__report__tests__run.snap
---
source: crates/wt-core/src/report.rs
expression: envelope
---
{
  "wt": {
    "schema": 1,
    "version": "VERSION"
  },
  "ok": true,
  "command": "command",
  "data": {
    "target": "repo/work",
    "task": "test",
    "args": [
      "test_file.rs"
    ],
    "child": {
      "code": 0,
      "signal": null
    },
    "log": ".wt/logs/test.log",
    "displaced": null,
    "steps": [
      {
        "id": "test",
        "scope": ".",
        "status": "ok",
        "child": {
          "code": 0,
          "signal": null
        },
        "duration_ms": 12
      }
    ]
  },
  "notices": [
    {
      "level": "info",
      "code": "EXAMPLE",
      "subject": "repo/work",
      "message": "example notice"
    }
  ],
  "error": null
}
