crates/wt-core/src/snapshots/wt_core__report__tests__run_dry.snap
---
source: crates/wt-core/src/report.rs
expression: envelope
---
{
  "wt": {
    "schema": 1,
    "version": "VERSION"
  },
  "ok": true,
  "command": "command",
  "data": {
    "task": "test",
    "steps": [
      {
        "id": "test",
        "scope": ".",
        "origin": "repo",
        "cwd": ".",
        "run": "cargo test",
        "exists": null,
        "lock": null,
        "sys_locks": [],
        "resource": false,
        "tied_to": null
      }
    ]
  },
  "notices": [
    {
      "level": "info",
      "code": "EXAMPLE",
      "subject": "repo/work",
      "message": "example notice"
    }
  ],
  "error": null
}
