crates/wt-core/src/snapshots/wt_core__report__tests__shell_init.snap
---
source: crates/wt-core/src/report.rs
expression: envelope
---
{
  "wt": {
    "schema": 1,
    "version": "VERSION"
  },
  "ok": true,
  "command": "command",
  "data": {
    "shell": "zsh",
    "script": "true"
  },
  "notices": [
    {
      "level": "info",
      "code": "EXAMPLE",
      "subject": "repo/work",
      "message": "example notice"
    }
  ],
  "error": null
}
