crates/wt-core/src/snapshots/wt_core__report__tests__tasks.snap
---
source: crates/wt-core/src/report.rs
expression: envelope
---
{
  "wt": {
    "schema": 1,
    "version": "VERSION"
  },
  "ok": true,
  "command": "command",
  "data": {
    "target": "repo/work",
    "tasks": [
      {
        "id": "test",
        "scope": ".",
        "origin": "repo",
        "cwd": ".",
        "needs": [
          "build"
        ],
        "resource": false,
        "tied_to": null,
        "lock": "tests",
        "description": "run tests"
      }
    ]
  },
  "notices": [
    {
      "level": "info",
      "code": "EXAMPLE",
      "subject": "repo/work",
      "message": "example notice"
    }
  ],
  "error": null
}
