crates/wt-core/src/snapshots/wt_core__report__tests__unregister.snap
---
source: crates/wt-core/src/report.rs
expression: envelope
---
{
  "wt": {
    "schema": 1,
    "version": "VERSION"
  },
  "ok": true,
  "command": "command",
  "data": {
    "label": "repo",
    "unregistered": true,
    "destroyed": [
      {
        "scope": ".",
        "task": "db",
        "state": "dropped",
        "child": {
          "code": 0,
          "signal": null
        }
      }
    ],
    "artifacts": [
      {
        "path": "generated.toml",
        "action": "deleted"
      }
    ]
  },
  "notices": [
    {
      "level": "info",
      "code": "EXAMPLE",
      "subject": "repo/work",
      "message": "example notice"
    }
  ],
  "error": null
}
